docs/versions/9.1.0/rules/lib/builtins.mdx
---
title: 'Built-in Types'
---

This section lists types of Starlark objects. With some exceptions, these type names are not valid Starlark symbols; instances of them may be acquired through different means.

* [Action](/versions/UNSAFE_release-9.1.0/rules/lib/builtins/Action)
* [actions](/versions/UNSAFE_release-9.1.0/rules/lib/builtins/actions)
* [apple_platform](/versions/UNSAFE_release-9.1.0/rules/lib/builtins/apple_platform)
* [Args](/versions/UNSAFE_release-9.1.0/rules/lib/builtins/Args)
* [Aspect](/versions/UNSAFE_release-9.1.0/rules/lib/builtins/Aspect)
* [Attribute](/versions/UNSAFE_release-9.1.0/rules/lib/builtins/Attribute)
* [bazel_module](/versions/UNSAFE_release-9.1.0/rules/lib/builtins/bazel_module)
* [bazel_module_tags](/versions/UNSAFE_release-9.1.0/rules/lib/builtins/bazel_module_tags)
* [BuildSetting](/versions/UNSAFE_release-9.1.0/rules/lib/builtins/BuildSetting)
* [CcCompilationOutputs](/versions/UNSAFE_release-9.1.0/rules/lib/builtins/CcCompilationOutputs)
* [CcLinkingOutputs](/versions/UNSAFE_release-9.1.0/rules/lib/builtins/CcLinkingOutputs)
* [CompilationContext](/versions/UNSAFE_release-9.1.0/rules/lib/builtins/CompilationContext)
* [configuration](/versions/UNSAFE_release-9.1.0/rules/lib/builtins/configuration)
* [ctx](/versions/UNSAFE_release-9.1.0/rules/lib/builtins/ctx)
* [depset](/versions/UNSAFE_release-9.1.0/rules/lib/builtins/depset)
* [DirectoryExpander](/versions/UNSAFE_release-9.1.0/rules/lib/builtins/DirectoryExpander)
* [DottedVersion](/versions/UNSAFE_release-9.1.0/rules/lib/builtins/DottedVersion)
* [exec_result](/versions/UNSAFE_release-9.1.0/rules/lib/builtins/exec_result)
* [ExecGroupCollection](/versions/UNSAFE_release-9.1.0/rules/lib/builtins/ExecGroupCollection)
* [ExecGroupContext](/versions/UNSAFE_release-9.1.0/rules/lib/builtins/ExecGroupContext)
* [ExecTransitionFactory](/versions/UNSAFE_release-9.1.0/rules/lib/builtins/ExecTransitionFactory)
* [ExpandedDirectory](/versions/UNSAFE_release-9.1.0/rules/lib/builtins/ExpandedDirectory)
* [extension_metadata](/versions/UNSAFE_release-9.1.0/rules/lib/builtins/extension_metadata)
* [Facts](/versions/UNSAFE_release-9.1.0/rules/lib/builtins/Facts)
* [FeatureConfiguration](/versions/UNSAFE_release-9.1.0/rules/lib/builtins/FeatureConfiguration)
* [File](/versions/UNSAFE_release-9.1.0/rules/lib/builtins/File)
* [fragments](/versions/UNSAFE_release-9.1.0/rules/lib/builtins/fragments)
* [java_annotation_processing](/versions/UNSAFE_release-9.1.0/rules/lib/builtins/java_annotation_processing)
* [Label](/versions/UNSAFE_release-9.1.0/rules/lib/builtins/Label)
* [LateBoundDefault](/versions/UNSAFE_release-9.1.0/rules/lib/builtins/LateBoundDefault)
* [LibraryToLink](/versions/UNSAFE_release-9.1.0/rules/lib/builtins/LibraryToLink)
* [License](/versions/UNSAFE_release-9.1.0/rules/lib/builtins/License)
* [LinkerInput](/versions/UNSAFE_release-9.1.0/rules/lib/builtins/LinkerInput)
* [LinkingContext](/versions/UNSAFE_release-9.1.0/rules/lib/builtins/LinkingContext)
* [macro](/versions/UNSAFE_release-9.1.0/rules/lib/builtins/macro)
* [mapped_root](/versions/UNSAFE_release-9.1.0/rules/lib/builtins/mapped_root)
* [module_ctx](/versions/UNSAFE_release-9.1.0/rules/lib/builtins/module_ctx)
* [path](/versions/UNSAFE_release-9.1.0/rules/lib/builtins/path)
* [propagation_ctx](/versions/UNSAFE_release-9.1.0/rules/lib/builtins/propagation_ctx)
* [Provider](/versions/UNSAFE_release-9.1.0/rules/lib/builtins/Provider)
* [repo_metadata](/versions/UNSAFE_release-9.1.0/rules/lib/builtins/repo_metadata)
* [repository_ctx](/versions/UNSAFE_release-9.1.0/rules/lib/builtins/repository_ctx)
* [repository_os](/versions/UNSAFE_release-9.1.0/rules/lib/builtins/repository_os)
* [repository_rule](/versions/UNSAFE_release-9.1.0/rules/lib/builtins/repository_rule)
* [root](/versions/UNSAFE_release-9.1.0/rules/lib/builtins/root)
* [rule](/versions/UNSAFE_release-9.1.0/rules/lib/builtins/rule)
* [rule_attributes](/versions/UNSAFE_release-9.1.0/rules/lib/builtins/rule_attributes)
* [runfiles](/versions/UNSAFE_release-9.1.0/rules/lib/builtins/runfiles)
* [struct](/versions/UNSAFE_release-9.1.0/rules/lib/builtins/struct)
* [Subrule](/versions/UNSAFE_release-9.1.0/rules/lib/builtins/Subrule)
* [subrule_ctx](/versions/UNSAFE_release-9.1.0/rules/lib/builtins/subrule_ctx)
* [SymlinkEntry](/versions/UNSAFE_release-9.1.0/rules/lib/builtins/SymlinkEntry)
* [tag_class](/versions/UNSAFE_release-9.1.0/rules/lib/builtins/tag_class)
* [Target](/versions/UNSAFE_release-9.1.0/rules/lib/builtins/Target)
* [template_ctx](/versions/UNSAFE_release-9.1.0/rules/lib/builtins/template_ctx)
* [TemplateDict](/versions/UNSAFE_release-9.1.0/rules/lib/builtins/TemplateDict)
* [toolchain_type](/versions/UNSAFE_release-9.1.0/rules/lib/builtins/toolchain_type)
* [ToolchainContext](/versions/UNSAFE_release-9.1.0/rules/lib/builtins/ToolchainContext)
* [transition](/versions/UNSAFE_release-9.1.0/rules/lib/builtins/transition)
* [wasm_exec_result](/versions/UNSAFE_release-9.1.0/rules/lib/builtins/wasm_exec_result)
* [wasm_module](/versions/UNSAFE_release-9.1.0/rules/lib/builtins/wasm_module)